--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,9 @@ jobs:
             gradle-${{ runner.os }}-
 
       - name: Build with Gradle Wrapper (Skip Tests)
-        run: ./gradlew build -x test
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build -x test
 
       - name: Docker build & push to Docker Hub
         run: |
